fixed scale issues on smaller devices

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 .social-btn {
     display: grid;
     place-items: center;
-    width: 350px;
+    width: min(90vw, 350px);
     height: 50px;
     font-size: 16px;
     border: none;
